--- a/pub/css/style.css
+++ b/pub/css/style.css
@@ -1,5 +1,5 @@
 body {
- background-image: url("../img/background.png");
+ background-image: url("../img/St-Iosafata-church.jpg");
  background-color: #cccccc;
  height: 100%;
 }
